# qt_modernwindow

./: .gitignore  CMakeLists.txt  macos_effect.h  macos_effect.mm  mainwindow.cpp  mainwindow.h  nmainwindow.cpp  nmainwindow.h  windows_effect.cpp  windows_effect.h
